2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/OA_Other_Charges_2_in_SGD__c.field-meta.xml
<CustomField>
    <fullName>OA_Other_Charges_2_in_SGD__c</fullName>
    <defaultValue>200.00</defaultValue>
    <label>OA Other Charges 2 (in SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>