2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Origin_Storage__c.field-meta.xml
<CustomField>
    <fullName>Origin_Storage__c</fullName>
    <formula>Origin_Storage_Volume_in_cuft__c *  Origin_Storage_unit_cost_per_cuft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Storage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>