2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Origin_Storage_unit_cost_per_cuft__c.field-meta.xml
<CustomField>
    <fullName>Origin_Storage_unit_cost_per_cuft__c</fullName>
    <label>Origin Storage (Unit cost per cuft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>