2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Origin_Warehouse_Handling__c.field-meta.xml
<CustomField>
    <fullName>Origin_Warehouse_Handling__c</fullName>
    <formula>Origin_Warehouse_Handling_Vol_in_cuft__c *  Origin_Warehouse_Handling_U_cst_cuft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Warehouse Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>