2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Outsourced_10ft_Truck__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_10ft_Truck__c</fullName>
    <label>Outsourced 10ft Truck</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>