2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Outsourced_by_Big_Truck__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_by_Big_Truck__c</fullName>
    <formula>Outsourced_24ft_Truck__c * 450</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outsourced by 24ft Truck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>