2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Outsourced_by_Small_Truck__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_by_Small_Truck__c</fullName>
    <formula>Outsourced_14ft_truck__c * 340</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outsourced by 14ft Truck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>