2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Outsourced_Half_Day_Trips__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_Half_Day_Trips__c</fullName>
    <formula>Outsourced_No_of_half_days__c * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outsourced (Half-Day Trips)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>