2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Outsourced_No_of_half_days__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_No_of_half_days__c</fullName>
    <label>Outsourced (Price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>