2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Port_Net_Depot_Handling_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Port_Net_Depot_Handling_Lumpsum__c</fullName>
    <label>Port Net, Depot Handling (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>