2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Quote_Description__c.field-meta.xml
<CustomField>
    <fullName>Quote_Description__c</fullName>
    <label>Quote Description</label>
    <type>TextArea</type>
</CustomField>