2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Seal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Seal_Fee__c</fullName>
    <formula>15 * Seal_Fee_No_Of_Seals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>