2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Seal_Fee_No_Of_Seals__c.field-meta.xml
<CustomField>
    <fullName>Seal_Fee_No_Of_Seals__c</fullName>
    <label>Seal Fee (No. of Seals)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>