2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Shuttling_10__c.field-meta.xml
<CustomField>
    <fullName>Shuttling_10__c</fullName>
    <formula>180 * Shuttling_10_No_of_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shuttling 10&apos;</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>