2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Shuttling_24__c.field-meta.xml
<CustomField>
    <fullName>Shuttling_24__c</fullName>
    <formula>Shuttling_24_No_of_days__c  * 370</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shuttling 24&apos;</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>