2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Shuttling_24_No_of_days__c.field-meta.xml
<CustomField>
    <fullName>Shuttling_24_No_of_days__c</fullName>
    <label>Shuttling 24&apos; (No.of days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>