2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Stair_Carry_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Stair_Carry_Lumpsum__c</fullName>
    <label>Stair Carry (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>