2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Stair_Carry_No_of_Flights__c.field-meta.xml
<CustomField>
    <fullName>Stair_Carry_No_of_Flights__c</fullName>
    <label>Stair Carry (No. of Flights)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>