2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Stair_Carry_Volume_in_cuft__c.field-meta.xml
<CustomField>
    <fullName>Stair_Carry_Volume_in_cuft__c</fullName>
    <label>Stair Carry (Volume in cuft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>