2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/THC_for_40_FCL__c.field-meta.xml
<CustomField>
    <fullName>THC_for_40_FCL__c</fullName>
    <formula>THC_for_40_FCL_No_of_containers__c * 450</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THC for 40’ FCL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>