2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/THC_for_40_FCL_No_of_containers__c.field-meta.xml
<CustomField>
    <fullName>THC_for_40_FCL_No_of_containers__c</fullName>
    <label>THC for 40’ FCL (No. of containers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>