2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/THC_for_Air_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>THC_for_Air_Lumpsum__c</fullName>
    <label>THC for Air (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>