2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>OS_Sub_Total__c + Freight_Sub_Total__c + DS_Sub_Total__c + Insurance_Comms_Sub_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>