2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Total_Cost_DS__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_DS__c</fullName>
    <formula>DS_Labour__c + 
Customs_Clearance_Permit__c + 
Port_Net_Depot_Handling_Lumpsum__c +  
GST_Duties__c + 
THC_for_20_FCL__c + 
THC_for_40_FCL__c + 
LOLO_for_20_FCL__c + 
LOLO_for_40_FCL__c + 
THC_for_LCL_Lumpsum__c + 
LCL_Processing_Fee_Lumpsum__c + 
Forklift_Charges_Lumpsum__c + 
THC_for_Air_Lumpsum__c + 
Haulage_for_20_FCL__c + 
Haulage_for_40_FCL__c + 
Shuttling_10__c + 
Shuttling_24__c + 
Transport_by_Small_Truck__c +  
Transport_by_Big_Truck__c + 
Local_Transfer_Lumpsum__c + 
Destination_Storage__c + 
DS_Warehouse_Handling__c + 
Handyman_Services__c + 
Cleaning_Services_Lumpsum__c + 
Stair_Carry_Lumpsum__c + 
Long_Carry__c + 
Piano_Handling_Lumpsum__c + 
Port_Storage_Lumpsum__c + 
Chassis_Demurrage_Lumpsum__c + 
Chassis_Detention_Lumpsum__c + 
Transport_Half_Day_Trips__c + 	
DA_Other_Charges_1_in_SGD__c + 
DA_Other_Charges_2_in_SGD__c + 
DA_Other_Charges_3_in_SGD__c + 
DA_Other_Charges_4_in_SGD__c + 
DA_Other_Charges_5_in_SGD__c + 
Haulage_for_40_HC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost DS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>