2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Total_Cost_Final__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Final__c</fullName>
    <formula>IF ( $RecordType.DeveloperName = &apos;DS&apos;, Total_Cost_DS__c, Total_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (Final)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>