2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Transport_by_Big_Truck__c.field-meta.xml
<CustomField>
    <fullName>Transport_by_Big_Truck__c</fullName>
    <formula>Transport_by_Big_Truck_No_of_days__c * 260</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport by Big Truck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>