2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Transport_by_Big_Truck_No_of_days__c.field-meta.xml
<CustomField>
    <fullName>Transport_by_Big_Truck_No_of_days__c</fullName>
    <label>Transport by Big Truck (No. of days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>