2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Transport_Half_Day_Trips__c.field-meta.xml
<CustomField>
    <fullName>Transport_Half_Day_Trips__c</fullName>
    <formula>Transport_No_of_half_days__c * 80</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport (Half-Day Trips)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>