2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/Artmove_IM.recordType-meta.xml
<RecordType>
    <fullName>Artmove_IM</fullName>
    <active>true</active>
    <description>Artmove&apos;s IM Job</description>
    <label>Artmove IM</label>
</RecordType>