2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/DS.recordType-meta.xml
<RecordType>
    <fullName>DS</fullName>
    <active>true</active>
    <description>Destination Services</description>
    <label>Destination Services</label>
</RecordType>