2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/IM_DTD.recordType-meta.xml
<RecordType>
    <fullName>IM_DTD</fullName>
    <active>true</active>
    <description>International Door-To-Door Service</description>
    <label>IM Door-To-Door</label>
</RecordType>