2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/IM_DTP.recordType-meta.xml
<RecordType>
    <fullName>IM_DTP</fullName>
    <active>true</active>
    <description>International Door-To-Port Service</description>
    <label>IM Door-To-Port</label>
</RecordType>