2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/LM.recordType-meta.xml
<RecordType>
    <fullName>LM</fullName>
    <active>true</active>
    <description>Local Move</description>
    <label>Local Move</label>
</RecordType>