2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/OS.recordType-meta.xml
<RecordType>
    <fullName>OS</fullName>
    <active>true</active>
    <description>Origin Services</description>
    <label>Origin Services</label>
</RecordType>