2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/RS.recordType-meta.xml
<RecordType>
    <fullName>RS</fullName>
    <active>true</active>
    <description>Relocation Services</description>
    <label>Relocation Services</label>
</RecordType>