2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/recordTypes/WH.recordType-meta.xml
<RecordType>
    <fullName>WH</fullName>
    <active>true</active>
    <description>Warehouse Services</description>
    <label>Warehouse</label>
</RecordType>