2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/validationRules/Freight_lumpsum.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_lumpsum</fullName>
    <active>true</active>
    <description>Freight_lumpsum ocean OR air</description>
    <errorConditionFormula>AND(
ISBLANK(Ocean_Freight_Lumpsum__c),
ISBLANK(Air_Freight_Lumpsum__c),
OR(
$RecordType.Name =&quot;IM Door-To-Door&quot;,
$RecordType.Name =&quot;IM Door-To-Port&quot;
))</errorConditionFormula>
    <errorDisplayField>Air_Freight_Lumpsum__c</errorDisplayField>
    <errorMessage>Please ensure that either Ocean Freight Lumpsum or Air Freight Lumpsum fields under Freight section is filled in.</errorMessage>
</ValidationRule>