2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/validationRules/Ocean_Freight_lumpsum.validationRule-meta.xml
<ValidationRule>
    <fullName>Ocean_Freight_lumpsum</fullName>
    <active>true</active>
    <description>Ocean Freight (lumpsum) and Freight Origin &amp; Destination fields to be entered</description>
    <errorConditionFormula>AND (
LEN ( Freight_Origin_Destination__c ) = 0,
Ocean_Freight_Lumpsum__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Air_Freight_Lumpsum__c</errorDisplayField>
    <errorMessage>Please enter Freight Origin &amp; Destination field.</errorMessage>
</ValidationRule>